Fix CLS: Use font-display:optional to eliminate font swap layout shift

--- a/index.html
+++ b/index.html
@@ -228,19 +228,11 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
     <link rel="dns-prefetch" href="https://www.clarity.ms" />
-    <!-- Load Google Fonts asynchronously to avoid blocking render -->
+    <!-- Load Google Fonts with font-display:optional to eliminate CLS from font swap -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;600;700&display=optional"
       rel="stylesheet"
-      media="print"
-      onload="this.media='all'"
     />
-    <noscript>
-      <link
-        href="https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;600;700&display=swap"
-        rel="stylesheet"
-      />
-    </noscript>
     <!-- Critical CSS inlined to avoid render-blocking -->
     <style>
       /* Critical above-the-fold styles with font fallback */
