--- a/index.html
+++ b/index.html
@@ -228,6 +228,14 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
     <link rel="dns-prefetch" href="https://www.clarity.ms" />
+    <!-- Preload the main Archivo font file to break critical request chain -->
+    <link
+      rel="preload"
+      href="https://fonts.gstatic.com/s/archivo/v25/k3kPo8UDI-1M0wlSV9XAw6lQkqWY8Q82sLydOxKsv4Rn.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
     <!-- Load Google Fonts asynchronously with display:optional to eliminate render-blocking and CLS -->
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo:wght@300;400;500;600;700&display=optional"
