Add main landmark for accessibility

--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
       </div>
     </nav>
 
+    <main id="main-content">
     <!-- Hero Section -->
     <section class="hero">
       <div class="container">
@@ -751,6 +752,8 @@
         </div>
       </div>
     </section>
+
+    </main>
 
     <!-- Footer -->
     <footer>
