Fix proposal-survey logo to use absolute URL

--- a/proposal-survey/index.html
+++ b/proposal-survey/index.html
@@ -466,7 +466,7 @@
     <header class="survey-header-bar">
       <a href="https://fifthstonedev.com" target="_blank">
         <img
-          src="../assets/horz-logo.original.png"
+          src="https://fifthstonedev.com/assets/horz-logo.original.png"
           alt="Fifth Stone Dev Logo"
         />
       </a>
